# mcp-server

./: .gitignore  README.md  icedos.nix
src/: pyproject.toml
src/icedos_mcp/: __init__.py  cli.py  config.py  config_files.py  modules.py  prompts.py  server.py  system.py
