[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icedos-mcp-server"
version = "0.1.0"
description = "MCP server for IceDOS — exposes configuration, modules, and system operations to AI agents"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "tomlkit>=0.13",
    "httpx>=0.27",
]

[project.scripts]
icedos-mcp-server = "icedos_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["icedos_mcp"]
